Allow undefined to be assigned to QVariant properties

QTBUG-9704